WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256542
REGRESSION (
262853@main
): Text selection sometimes disappears after interacting with selection handles
https://bugs.webkit.org/show_bug.cgi?id=256542
Summary
REGRESSION (262853@main): Text selection sometimes disappears after interacti...
Wenson Hsieh
Reported
2023-05-09 12:30:32 PDT
rdar://108200433
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2023-05-09 12:52:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13650
EWS
Comment 2
2023-05-09 15:32:08 PDT
Committed
263880@main
(0f118a09c40e): <
https://commits.webkit.org/263880@main
> Reviewed commits have been landed. Closing PR #13650 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug